--- a/themes/socialasset/assets/css/main.css
+++ b/themes/socialasset/assets/css/main.css
@@ -16,6 +16,7 @@
 @import url('_login-register.css');
 @import url('_contact.css');
 @import url('_footer.css');
+@import url('_gallery.css');
 
 
 
