--- a/themes/socialasset/assets/css/_campaign-list.css
+++ b/themes/socialasset/assets/css/_campaign-list.css
@@ -437,6 +437,7 @@ min-height: 42px;
 
 .campaigns-list-item-des-hover .campaigns-item-cat-name span{
 	right: 10px;
+	z-index: 999;
 }
 
 .campaigns-list-item-des-hover-des{
