--- a/themes/socialasset/assets/css/_user-campaign-page.css
+++ b/themes/socialasset/assets/css/_user-campaign-page.css
@@ -20,7 +20,8 @@ a.backto-panel {
   padding: 135px 0 90px;
 } 
 .miracle-plan-slider-wrp{
-  width: 60.5%;
+  width: 100%;
+  max-width: 751px;
   float: left;
 }
 .miraclePlanBigSlider .miraclePlanBigSlider-item{
@@ -119,10 +120,37 @@ span.miraclePlanthumbSlider-item img{
   width: 100%;
 }
 .miracle-plan-des-wrp{
-  width: 39.5%;
-  float: left;  
+ 
   padding-top: 5px;
 }
+
+#customSidebar{
+   width: 100%;
+   max-width: 480px;
+   
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 10%;
+  padding-top: 215px;
+  z-index: 5;
+  height: 100%;
+}
+#customSidebar .miracle-plan-des-innr{
+  background: #F4F5F9; 
+  padding: 20px 15px;
+  border-radius: 5px;
+}
+.user-rel-camp-sec{
+  position: relative;
+  z-index: 6;
+}
+
+.footer-wrp{
+  position: relative;
+  z-index: 7;
+}
+
 .miracle-plan-des-innr{
   padding-left: 45px;
 }
@@ -560,16 +588,45 @@ p.text-supportedbyUser,
 
 
 
-@media(max-width: 1499px){
-
+@media(max-width: 1799px){
+  .miracle-plan-sec{
+    padding-top: 80px;
+  }
+  #customSidebar{
+    padding-top: 160px;
+    max-width: 520px;
+  }
+  .miracle-plan-slider-wrp,
+  .user-story-cmpaign-con{
+    max-width: 715px;
+  }
+  .miracle-plan-des-wrp h3{
+    font-size: 27px;
+    margin-bottom: 10px;
+  }
+  .miracle-plan-progress-camp ul{
+    padding-bottom: 15px;
+  }
+  .miracle-plan-progress-btm-des{
+    padding-bottom: 20px;
+  }
+  .miracle-plan-progress-camp hr{
+    margin: 5px 0 15px;
+  }
 }
 
 @media(max-width: 1399px){
-
+  .miracle-plan-slider-wrp,
+  .user-story-cmpaign-con {
+      max-width: 720px;
+  }
 }
 
 @media(max-width: 1299px){
-
+  .miracle-plan-slider-wrp,
+  .user-story-cmpaign-con {
+      max-width: 650px;
+  }
 }
 
 @media(max-width: 1199px){
@@ -595,6 +652,18 @@ p.text-supportedbyUser,
   .user-story-cmpaign-sec {
     padding-bottom: 100px;
   }
+  .miracle-plan-slider-wrp, 
+  .user-story-cmpaign-con,
+  .miracle-plan-des-wrp {
+      max-width: 639px;
+      width: 100%;
+      margin-left: auto;
+      margin-right: auto;
+      float: none;
+      padding-left: 0;
+      padding-right: 0;
+  }
+
 }
 
 @media(max-width: 991px){
@@ -607,10 +676,6 @@ p.text-supportedbyUser,
     padding: 0;
     padding-top: 30px;
   }
-  .miracle-plan-des-innr{
-    max-width: 550px;
-    margin: 0 auto;
-  }
   .user-story-cmpaign-con {
     padding-left: 0;
     max-width: 705px;
@@ -618,6 +683,9 @@ p.text-supportedbyUser,
   }
   .user-rel-camp-sec .show-more-btn {
     padding-bottom: 60px!important;
+  }
+  .miracle-plan-des-innr {
+      padding-left: 0;
   }
 }
 
